<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">
            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_background"
                android:hint="@string/full_name"
                android:padding="10dp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:background="@drawable/square_background"
                android:drawableRight="@drawable/ic_down_arrow"
                android:gravity="center_vertical"
                android:hint="@string/department"
                android:padding="10dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_left"
                        android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/qualifications"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/graduate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graduate"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/pgdba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgdba"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketing"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/engineer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engineer"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/mtech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_tech"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:text="@string/your_favourite_color"
                    android:textColor="@color/colorBlack"/>
                <FrameLayout
                    android:id="@+id/colorBox"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                ></FrameLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:text="@string/number_of_pets"
                    android:textColor="@color/colorBlack"/>
                <TextView
                    android:id="@+id/txt_pets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_background"
                    android:drawableRight="@drawable/ic_up_down"
                    android:gravity="center"
                    android:minWidth="70dp"
                    android:padding="5dp"
                    android:text="1"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>
            <EditText
                android:id="@+id/commentBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:background="@drawable/square_background"
                android:gravity="top"
                android:hint="@string/enter_profile_information"
                android:minLines="4"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:text="@string/date_birth"
                    android:textColor="@color/colorBlack"/>
                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/square_background"
                    android:gravity="center"
                    android:minWidth="70dp"
                    android:padding="5dp"
                    android:text="  /  /  "
                    android:textColor="@color/colorBlack"/>
                <ImageView
                    android:id="@+id/img_cal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:src="@drawable/ic_cal"/>
            </LinearLayout>
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:background="@color/colorBlack"
                android:padding="5dp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>